# rusty-candle-pattern-finder

./: Cargo.toml  README.md  config.toml
src/: backtest.rs  candle.rs  config.rs  error.rs  fetcher.rs  main.rs  pattern.rs
