[package]
name = "rusty-candle-pattern-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[lints.clippy]
perf = { level = "deny", priority = -1 }
redundant_clone = { level = "deny" }
needless_collect = { level = "deny" }
large_enum_variant = { level = "warn" }
